--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col-8 mt-2">
         <div class="card text-center shadow mb-2 bg-white rounded">
           <div class="card-header font-italic">
-            by Cody B.
+            by <%= article.user.username if article.user %>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success" %></h5>
