--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,8 @@
-<h1 class="text-center mt-2">Cody's Bloggers</h1>
+<div class="apple_pagination">
+  <%= will_paginate @users, :container => false%>
+</div>
+<h3 class="text-center mt-2">Cody's Bloggers</h1>
 <%= render 'user' %>
+<div class="apple_pagination mt-3">
+  <%= will_paginate @users, :container => false%>
+</div>
