--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,15 @@
 
 <%= gravatar_for @user, size:200 %>
 
-<div class="text-center mt-4">
-  <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info"%>
-<div>
+<% if logged_in? && @user == current_user %>
+  <div class="text-center mt-4">
+    <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info"%>
+  <div>
+<% end %>
 
 <h3 class="text-center mt-3">Articles</h1>
 <%= render 'articles/article' %>
+
+<div class="apple_pagination mt-3">
+  <%= will_paginate @articles, :container => false%>
+</div>
